# ncurses-todo-app

./: CMakeLists.txt  Readme.md
include/: AppConfig.h  ColorManager.h  Colors.h  DataList.h  Dimension.h  HelperFunctions.h  InputWindow.h  Position.h  Serializable.h  TaskItem.h  TaskManager.h  TaskPersistence.h  TextContent.h  Window.h  WindowManager.h
src/: ColorManager.cpp  DataList.cpp  HelperFunctions.cpp  InputWindow.cpp  TaskItem.cpp  TaskManager.cpp  TaskPersistence.cpp  TextContent.cpp  Window.cpp  WindowManager.cpp  main.cpp
